--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="css/style.css" type="text/css">
 <title>Відпочинок</title>
 </head>
 <body>
-<img src='1.png' alt='oo'/>
+<img src='Картинки/1.png' alt='oo'/>
 <h3 class=" btn-lgc; font-weight-bold">Вітаємо!</h3>
 <p class="font-italic">Раді бачити вас на нашому сайті. Ми намагалися створити місце, яке допоможе вам скрасити дозвілля і зігріти душу: фільми, серіали ... Навігація досить проста, ви швидко розберетеся. Бажаємо приємного проведення часу.</p>
 <div class="btn-group" role="group" aria-label="Basic example">
            <button>
-                 <a href="Серіали.html" target="_blank"><div class="d-flex justify-content-center">Серіали</div></a>
+                 <a href="Страницы/Серіали.html" target="_blank"><div class="d-flex justify-content-center">Серіали</div></a>
            </button> 
             <button>
-                 <a href="Фільми.html" target="_blank"><div class="d-flex justify-content-center">Фільми</div></a>
+                 <a href="Страницы/Фільми.html" target="_blank"><div class="d-flex justify-content-center">Фільми</div></a>
              </button> 
        
  </div>
-  <img src="01.png" class="okey"/>
+  <img src="Картинки/01.png" class="okey"/>
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
