--- a/Страницы/Серіали.html
+++ b/Страницы/Серіали.html
@@ -12,17 +12,16 @@
 <body>
 <img src='02.png' alt='oo'/>
 <h2>Серіали</h2>
-<p>Якщо ви зазернули сюди, то вас, скоріш усього, цікавлять серіали і ви шукаєте, що подивитися нового. Щоб ідея серіалу була нешаблонна, діалоги персонажів добре прописані і так далі. 
-    Що ж, хотілося б вас ознайомити з такими трьома серіалами: </p> 
+<p>Якщо ви зазирнули сюди, то вас, скоріш усього, цікавлять серіали й ви шукаєте, що подивитися нового. Щоб ідея серіалу була нешаблонна, діалоги персонажів добре прописані. Що ж, хотілося б вас ознайомити з такими трьома серіалами:</p> 
 <h1 class="font-weight-bold">Утопія</h1> 
 <img src="03.png" class="wow">
-<p class="font-italic">"Експерименти утопії" - комікс, створений пацієнтом псих больніці. Кілька його сторінок потрапляють в руки п'ятьом персонажам, і за ними тут же починається смертельне полювання."</p> 
+<p class="font-italic">"Експерименти утопії" - комікс, створений пацієнтом псих лікарні. Кілька його сторінок потрапляють в руки п'ятьом персонажам, і за ними тут же починається смертельне полювання."</p> 
 <h1 class="font-weight-bold">Залишені</h1>
 <img src="04.png" class="wo">
-<p class="font-italic">"Залишені" один з сами' сильних на даний момент серіалів на тему містики. Сюжет стартує з моменту, коли частина населення безслідно зникає з лиця землі. Які залишилися необхідно примиритися з втратами: хтось шукає і знаходить Бога, хтось починає тиху ворожу війну.</p> 
+<p class="font-italic">"Залишені" один з самих сильних на даний момент серіалів на тему містики. Сюжет стартує з моменту, коли частина населення безслідно зникає з лиця землі. Які залишилися необхідно примиритися з втратами: хтось шукає і знаходить Бога, хтось починає тиху ворожу війну.</p> 
 <h1 class="font-weight-bold">Зникла кімната</h1> 
 <img src="05.png" class="woy">
-<p class="font-italic">Сюжет серіалу закручений в спіраль і не відпускає: існує таємнича кімната, ключ від якої дістався головному герою, детектива Джо Міллера. У цій кімнаті одного разу сталося якась подія, через що всі предмети знайшли магічні властивості, але не всі вони - безпечні.</p>
+<p class="font-italic">Сюжет серіалу закручений в спіраль і не відпускає: існує таємнича кімната, ключ від якої дістався головному герою, детектива Джо Міллера. У цій кімнаті одного разу сталося якась подія, через що всі предмети знайшли магічні властивості, але не всі вони — безпечні.</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
