--- a/Страницы/Серіали.html
+++ b/Страницы/Серіали.html
@@ -21,7 +21,7 @@
 <p class="font-italic">"Залишені" один з самих сильних на даний момент серіалів на тему містики. Сюжет стартує з моменту, коли частина населення безслідно зникає з лиця землі. Які залишилися необхідно примиритися з втратами: хтось шукає і знаходить Бога, хтось починає тиху ворожу війну.</p> 
 <h1 class="font-weight-bold">Зникла кімната</h1> 
 <img src="05.png" class="woy">
-<p class="font-italic">Сюжет серіалу закручений в спіраль і не відпускає: існує таємнича кімната, ключ від якої дістався головному герою, детектива Джо Міллера. У цій кімнаті одного разу сталося якась подія, через що всі предмети знайшли магічні властивості, але не всі вони — безпечні.</p>
+<p class="font-italic">Сюжет серіалу закручений в спіраль і не відпускає: існує таємнича кімната, ключ від якої дістався головному герою, детективу Джо Міллеру. У цій кімнаті одного разу сталося якась подія, через що всі предмети знайшли магічні властивості, але не всі вони — безпечні.</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
