--- a/Страницы/Фільми.html
+++ b/Страницы/Фільми.html
@@ -15,7 +15,7 @@
   <p>Декілька детективних трилерів, які не повинні залишитися без уваги:</p> 
   <h1 class="font-weight-bold">Тіло</h1> 
   <img src="07.png" class="www">
-  <p class="font-italic">Для тих, кому набридли голлівудські штампи, іспанські трилери стануть справжньою віддушиною. Похмура, але дуже реалістична атмосфера, напружений сюжет і просто приголомшлива розв'язка, після якої відчуваєш себе дитиною, якого обдурив фокусник.</p> 
+  <p class="font-italic">Для тих, кому набридли голлівудські штампи, іспанські трилери стануть ковтком свіжого повітря. Похмура, але дуже реалістична атмосфера, напружений сюжет і просто приголомшлива розв'язка, після якої відчуваєш себе дитиною, якого обдурив фокусник.</p> 
   <h1 class="font-weight-bold">Колонія Дігнідад</h1>
   <img src="08.png" class="wok">
   <p class="font-italic">У цьому фільмі кілька козирів. По-перше, він заснований на реальних подіях, по-друге, він піднімає гострі соціальні проблеми, по-третє, після нього Емму Уотсон перестаєш сприймати Герміоною. Досвідчені критики не оцінили цю стрічку, мовляв, «Колонія» не відповідає вимогам жодного жанру.</p> 
